--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ theme:
   name: material
   features:
     - navigation.tabs
+    - navigation.footer
   
   palette: 
     # Palette toggle for dark mode
@@ -27,6 +28,16 @@ theme:
   font:
     text: Montserrat
     code: Montserrat
+
+extra:
+  generator: false
+  social:
+  - icon: "fontawesome/brands/instagram"
+    link: "https://www.instagram.com/alvinallen333/"
+  - icon: "fontawesome/brands/github"
+    link: "https://www.github.com/alvinbengeorge"
+  - icon: "fontawesome/brands/linkedin"
+    link: "https://www.linkedin.com/in/alvin-ben-george-427383201/"
 
 markdown_extensions:
   - admonition
