--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: "Alvin Ben George"
-site_url: "https://alvinbengeorge.github.io"
+site_name: "Kevin Saji"
+site_url: "https://ackerman77i.github.io"
 nav:
   - Home: index.md
 
